# validate-btc-header

./: Cargo.toml  README.md
examples/: validate_header.rs
src/: lib.rs
src/btc_validation/: difficulty_update.rs  hash_target.rs  header_step.rs  median.rs  mod.rs  prev_block_hash.rs
src/mp/: bignat.rs
