[package]
name = "validate-btc-header"
version = "0.1.0"
description = "BTC light client proof generation using zkSNARKs"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]
edition = "2021"

[dependencies]
rand = { version = "0.8", default-features = false }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
bellpepper-core = { version = "0.4.0", default-features = false }
bellpepper = { version = "0.4.0", default-features = false }
ff = { version = "0.13", features = ["derive"] }
byteorder = "0.3.0"
nova-snark = "0.35.0"

[features]
default = []

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
bincode = "1.3.3"
flate2 = "1.0.25"
